--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>COCO</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="wrapper">
+        <img id="logo" class="logo" src="images/logo.png">
+
+        <div> 
+            <h1 class="title">What als je de familie zou kunnen ontmoeten die voor jou kwam...</h1>
+        </div>
+
+        <div>
+            <p class="tekst">De ambitieuze muziekant Miguel bundelt zijn krachten met de charmante bedrieger Hector 
+            op een Buitengewone reis door het kleurrijke Land der Doden om zijn familiegescheidenis 
+            te onthullen. </p>   
+                    
+        </div>
+
+
+        <div class="title">
+            <p class="title2">TICKETS</p> 
+        </div> 
+
+    </div>
+
+
+</body>
+</html>
