--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
         <div class="title">
-            <p class="title2">TICKETS</p> 
+            <a href="#" class="title2">TICKETS</a> 
         </div> 
 
     </div>
